tests/errors/dummy.py
"""
site: dummy
routes:
 - /
exports:
 - description: Verify no .pyc is generated on shelve.
"""
